# rust-etcd

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: connection.rs  election.rs  lib.rs  state_machine.rs
core/src/proto/: instruction.proto  mod.rs
core/src/test/: mod.rs  test_timer.rs  test_vec.rs
test-lib/: Cargo.toml
test-lib/src/network/: client.rs  server.rs
test-lib/src/proto/: instruction.proto  instruction.rs  mod.rs
