[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#timer = "*"
#chrono = { version = "*" }
tokio = { version = "1", features = ["io-util", "rt-multi-thread", "net"] }
bytes = "*"

protobuf-codegen-pure = "2"
protobuf = "2"