[package]
name = "test-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "network-client"
path = "src/network/client.rs"

[[bin]]
name = "network-server"
path = "src/network/server.rs"

[[bin]]
name = "proto-gen"
path = "src/proto/mod.rs"

[dependencies]
protobuf-codegen-pure = "2"
protobuf = "2"